--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="A comprehensive guide to burlesque shows, performers, and venues in Charleston, South Carolina.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://cabaretversatile.com">
-    <title>Charleston Burlesque: The Ultimate Guide</title>
+    <title>Charleston Burlesque: The Ultimate Show</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
